app/javascript/flavours/glitch/styles/mastodon/components.scss
/* ... */
.status-card__image-preview {
  display: block;
  margin: 0;
  width: 100%;
  height: 100%;
  object-fit: fill;
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  z-index: 0;
  background: var(--color-bg-primary);

  &--hidden {
    display: none;
  }
}

.status-card.expanded {
  flex-direction: column;
  align-items: flex-start;
}

.status-card.expanded .status-card__image {
  width: 100%;
  aspect-ratio: auto;
}

.status-card__image,
.status-card__image-image,
.status-card__image-preview {
  border-start-start-radius: 8px;
  border-start-end-radius: 0;
  border-end-end-radius: 0;
  border-end-start-radius: 8px;
}

.status-card.expanded .status-card__image,
.status-card.expanded .status-card__image-image,
.status-card.expanded .status-card__image-preview {
  border-start-end-radius: 8px;
  border-end-end-radius: 0;
  border-end-start-radius: 0;
}

.status-card.bottomless .status-card__image,
.status-card.bottomless .status-card__image-image,
.status-card.bottomless .status-card__image-preview {
  border-end-end-radius: 0;
  border-end-start-radius: 0;
}

.status-card.expanded > a {
  width: 100%;
}

.load-more {
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--color-text-primary);
  background-color: transparent;
  border: 0;
  font-size: inherit;
  line-height: inherit;
  width: 100%;
  padding: 15px;
  box-sizing: border-box;
  text-decoration: none;

  &--large {
    padding-block: 32px;
  }

  &:is(button) {
    &:hover {
      background: var(--color-bg-secondary);
    }

    &:focus-visible {
      outline: var(--outline-focus-default);
      outline-offset: -2px;
    }
  }

  .icon {
    width: 22px;
    height: 22px;
  }
}

.load-gap {
  border-bottom: 1px solid var(--color-border-primary);
}

.timeline-hint {
  text-align: center;
  color: var(--color-text-secondary);
  padding: 16px;
  box-sizing: border-box;
  width: 100%;
  font-size: 14px;
  line-height: 21px;

  strong {
    font-weight: 500;
  }

  a {
    color: var(--color-text-brand);
    text-decoration: none;

    &:hover,
    &:focus,
    &:active {
      text-decoration: underline;
      color: var(--color-text-brand-soft);
    }
  }

  &--with-descendants {
    border-top: 1px solid var(--color-border-primary);
  }
}

.regeneration-indicator {
  color: var(--color-text-secondary);
  border: 1px solid var(--color-border-primary);
  border-top: 0;
  cursor: default;
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 20px;

  &__figure {
    display: block;
    width: 100%;
    height: auto;
    max-width: 350px;
    margin-top: -50px;
  }

  &__label {
    text-align: center;
    font-size: 16px;

    strong {
      font-weight: 500;
      display: block;
      margin-bottom: 10px;
      color: var(--color-text-secondary);
    }

    span {
      font-size: 15px;
    }
  }
}

.column-header__wrapper {
  position: relative;
  flex: 0 0 auto;
  z-index: 1;

  &.active {
    box-shadow: 0 1px 0 var(--color-bg-brand-softest);

    &::before {
      display: block;
      content: '';
      position: absolute;
      bottom: -13px;
      inset-inline-start: 0;
      inset-inline-end: 0;
      margin: 0 auto;
      width: 60%;
      pointer-events: none;
      height: 28px;
      z-index: 1;
      background: radial-gradient(
        ellipse,
        rgb(from var(--color-bg-brand-base) r g b / 23%) 0%,
        transparent 60%
      );
    }
  }

  .announcements {
    z-index: 1;
    position: relative;
  }
}

.column-header__select-row {
  border-width: 0 1px 1px;
  border-style: solid;
  border-color: var(--color-border-primary);
  padding: 15px;
  display: flex;
  align-items: center;
  gap: 8px;

  &__checkbox .check-box {
    display: flex;
  }

  &__select-menu:disabled {
    visibility: hidden;
  }

  &__mode-button {
    margin-left: auto;
    color: var(--color-text-brand);
    font-weight: bold;
    font-size: 14px;

    &:hover {
      color: var(--color-text-brand-soft);
    }
  }
}

.column-header {
  display: flex;
  font-size: 16px;
  border: 1px solid var(--color-border-primary);
  border-radius: 4px 4px 0 0;
  flex: 0 0 auto;
  position: relative;
  z-index: 2;
  outline: 0;

  &__title-wrapper {
    display: flex;
    flex-grow: 1;
  }

  &__title {
    display: flex;
    align-items: center;
    gap: 5px;
    flex-grow: 1;
    margin: 0;
    border: 0;
    padding: 13px;
    padding-inline-end: 0;
    color: inherit;
    background: transparent;
    font: inherit;
    text-align: start;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;

    &--with-back-button {
      padding-inline-start: 0;
    }

    &:focus-visible {
      outline: var(--outline-focus-default);
    }

    .logo {
      height: 24px;
    }
  }

  .column-header__back-button {
    flex: 1;
    color: var(--color-text-brand);

    &.compact {
      flex: 0 0 auto;
      color: var(--color-text-primary);
    }
  }

  &.active {
    .column-header__icon {
      color: var(--color-text-brand);
      text-shadow: 0 0 10px var(--color-bg-brand-softest);
    }
  }

  &:focus,
  &:active {
    outline: 0;
  }

  &__advanced-buttons {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 16px;
    padding-top: 0;

    &:first-child {
      padding-top: 16px;
    }
  }
}

.column-header__buttons {
  height: 48px;
  display: flex;
}

.column-header__links {
  margin-bottom: 14px;
}

.column-header__links .text-btn {
  margin-inline-end: 10px;
}
/* ... */

